--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -4,6 +4,20 @@
   <%= f.label :title %>
   <%= f.text_field :title %>
   <br />
+  <%= f.label :artist_name %>
+  <%= f.text_field :artist_name, list: "artists_autocomplete" %>
+      <datalist id="artists_autocomplete">
+        <% Artist.all.each do |artist| %>
+          <option value="<%= artist.name %>">
+        <% end %>
+      </datalist>
+  <br />
+  <%= f.label :genre_id %>
+  <%= f.collection_select :genre_id, Genre.all, :id, :name %>
+
+  <input type="text" name="song[note_contents][]" id="song_notes_1">
+  <input type="text" name="song[note_contents][]" id="song_notes_2">
+  <input type="text" name="song[note_contents][]" id="song_notes_3">
 
   <%= f.submit %>
 <% end %>
